資材をコンテナに入れた
バージョンを合わせるのが面倒なのでDockerに封じ込める

--- a/.gitignore
+++ b/.gitignore
@@ -8,10 +8,9 @@
 #   git rm -r .ipynb_checkpoints/
 #
 
-
 # End of https://www.gitignore.io/api/jupyternotebook
 introduction_to_ml_with_python-master/
 cache/
 extra/
 
-/book/
+/dataset/
